styles/app/tasker_app.module.scss
.container {
    height: 100vh;
    width: 100vw;
    position: relative;
    will-change: transform;
    transition: background 0.3s;

    .tabs {
        height: 50px;
        z-index: 999999;
    }


    .settingsWrap {
        position: fixed;
        bottom: .5em;
        left: .5em;
        cursor: pointer;
        z-index: 100;
        filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));
    }

    .hideSettingsPanel {
        position: fixed;
        bottom: 40px;
        left: 30px;
        opacity: 0%;
        pointer-events: none;
        transition: opacity 0.2s ease-out;
        z-index: 500;
    }
    

    .settingsPanelWrapper {
        position: fixed;
        bottom: 40px;
        left: 30px;
        z-index: 100;
        opacity: 95%;
        transition: opacity 0.2s ease-out;
        z-index: 500;
    }

    .newCardWrap {
        position: fixed;
        bottom: .5em;
        right: 1em;
        cursor: pointer;
        z-index: 100;
        filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));

    }

    .cardContainer {
            margin-top: 2.5vw;
            display: flex;
            justify-content: center;
        .cards {
            // column-count: 2;
            column-gap: .8em;
            width: 95vw;
        }
        .card {
            display: inline-block;
            width: 100%;
            margin-bottom: .8em;
        }
    }
}


.darkMode {
    background: #284941;
    transition: 0.3s;


}

